Update swagger.yaml (#15)
* Update swagger.yaml

* implement tags
